--- a/try.ipynb
+++ b/try.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "fce84e80",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "582c7e3b",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "587cce90-ba80-4b77-b4d5-b790bfdac350",
+       "ref": "9aa3037b-031f-4f9d-8a74-3b09db5e5d6c",
        "rows": [
         [
          "0",
@@ -462,7 +462,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "3500145c",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "9fe0df29",
    "metadata": {},
    "outputs": [
@@ -495,29 +495,29 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 500 entries, 0 to 499\n",
       "Data columns (total 20 columns):\n",
-      " #   Column                Non-Null Count  Dtype         \n",
-      "---  ------                --------------  -----         \n",
-      " 0   region                500 non-null    object        \n",
-      " 1   crop_type             500 non-null    object        \n",
-      " 2   soil_moisture_%       500 non-null    float64       \n",
-      " 3   soil_pH               500 non-null    float64       \n",
-      " 4   temperature_C         500 non-null    float64       \n",
-      " 5   rainfall_mm           500 non-null    float64       \n",
-      " 6   humidity_%            500 non-null    float64       \n",
-      " 7   sunlight_hours        500 non-null    float64       \n",
-      " 8   irrigation_type       500 non-null    object        \n",
-      " 9   fertilizer_type       500 non-null    object        \n",
-      " 10  pesticide_usage_ml    500 non-null    float64       \n",
-      " 11  sowing_date           500 non-null    datetime64[ns]\n",
-      " 12  harvest_date          500 non-null    datetime64[ns]\n",
-      " 13  total_days            500 non-null    int64         \n",
-      " 14  yield_kg_per_hectare  500 non-null    float64       \n",
-      " 15  timestamp             500 non-null    object        \n",
-      " 16  latitude              500 non-null    float64       \n",
-      " 17  longitude             500 non-null    float64       \n",
-      " 18  NDVI_index            500 non-null    float64       \n",
-      " 19  crop_disease_status   500 non-null    object        \n",
-      "dtypes: datetime64[ns](2), float64(11), int64(1), object(6)\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   region                500 non-null    object \n",
+      " 1   crop_type             500 non-null    object \n",
+      " 2   soil_moisture_%       500 non-null    float64\n",
+      " 3   soil_pH               500 non-null    float64\n",
+      " 4   temperature_C         500 non-null    float64\n",
+      " 5   rainfall_mm           500 non-null    float64\n",
+      " 6   humidity_%            500 non-null    float64\n",
+      " 7   sunlight_hours        500 non-null    float64\n",
+      " 8   irrigation_type       350 non-null    object \n",
+      " 9   fertilizer_type       500 non-null    object \n",
+      " 10  pesticide_usage_ml    500 non-null    float64\n",
+      " 11  sowing_date           500 non-null    object \n",
+      " 12  harvest_date          500 non-null    object \n",
+      " 13  total_days            500 non-null    int64  \n",
+      " 14  yield_kg_per_hectare  500 non-null    float64\n",
+      " 15  timestamp             500 non-null    object \n",
+      " 16  latitude              500 non-null    float64\n",
+      " 17  longitude             500 non-null    float64\n",
+      " 18  NDVI_index            500 non-null    float64\n",
+      " 19  crop_disease_status   370 non-null    object \n",
+      "dtypes: float64(11), int64(1), object(8)\n",
       "memory usage: 78.3+ KB\n"
      ]
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5426e60e",
    "metadata": {},
    "outputs": [
@@ -618,8 +618,8 @@
         },
         {
          "name": "timestamp",
-         "rawType": "object",
-         "type": "string"
+         "rawType": "datetime64[ns]",
+         "type": "datetime"
         },
         {
          "name": "latitude",
@@ -640,9 +640,29 @@
          "name": "crop_disease_status",
          "rawType": "object",
          "type": "string"
+        },
+        {
+         "name": "sowing_month",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "sowing_quarter",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "harvest_month",
+         "rawType": "int32",
+         "type": "integer"
+        },
+        {
+         "name": "harvest_quarter",
+         "rawType": "int32",
+         "type": "integer"
         }
        ],
-       "ref": "27a0444e-fe49-44fc-af36-9b87c3b48894",
+       "ref": "29fd6fc5-f8e5-4812-804a-b802f59c2587",
        "rows": [
         [
          "0",
@@ -661,11 +681,15 @@
          "2024-05-09 00:00:00",
          "122",
          "4408.07",
-         "2024-03-19",
+         "2024-03-19 00:00:00",
          "14.970941",
          "82.997689",
          "0.63",
-         "Mild"
+         "Mild",
+         "1",
+         "1",
+         "5",
+         "2"
         ],
         [
          "1",
@@ -684,11 +708,15 @@
          "2024-05-26 00:00:00",
          "112",
          "5389.98",
-         "2024-04-21",
+         "2024-04-21 00:00:00",
          "16.613022",
          "70.869009",
          "0.58",
-         "None"
+         "None",
+         "2",
+         "1",
+         "5",
+         "2"
         ],
         [
          "2",
@@ -707,11 +735,15 @@
          "2024-06-26 00:00:00",
          "144",
          "2931.16",
-         "2024-02-28",
+         "2024-02-28 00:00:00",
          "19.503156",
          "79.068206",
          "0.8",
-         "Mild"
+         "Mild",
+         "2",
+         "1",
+         "6",
+         "2"
         ],
         [
          "3",
@@ -730,11 +762,15 @@
          "2024-07-04 00:00:00",
          "134",
          "4227.8",
-         "2024-05-14",
+         "2024-05-14 00:00:00",
          "31.071298",
          "85.519998",
          "0.44",
-         "None"
+         "None",
+         "2",
+         "1",
+         "7",
+         "3"
         ],
         [
          "4",
@@ -753,15 +789,19 @@
          "2024-05-20 00:00:00",
          "105",
          "4979.96",
-         "2024-04-13",
+         "2024-04-13 00:00:00",
          "16.56854",
          "81.69172",
          "0.84",
-         "Severe"
+         "Severe",
+         "2",
+         "1",
+         "5",
+         "2"
         ]
        ],
        "shape": {
-        "columns": 20,
+        "columns": 24,
         "rows": 5
        }
       },
@@ -804,6 +844,10 @@
        "      <th>longitude</th>\n",
        "      <th>NDVI_index</th>\n",
        "      <th>crop_disease_status</th>\n",
+       "      <th>sowing_month</th>\n",
+       "      <th>sowing_quarter</th>\n",
+       "      <th>harvest_month</th>\n",
+       "      <th>harvest_quarter</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -829,6 +873,10 @@
        "      <td>82.997689</td>\n",
        "      <td>0.63</td>\n",
        "      <td>Mild</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -852,6 +900,10 @@
        "      <td>70.869009</td>\n",
        "      <td>0.58</td>\n",
        "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -875,6 +927,10 @@
        "      <td>79.068206</td>\n",
        "      <td>0.80</td>\n",
        "      <td>Mild</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -898,6 +954,10 @@
        "      <td>85.519998</td>\n",
        "      <td>0.44</td>\n",
        "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -921,23 +981,27 @@
        "      <td>81.691720</td>\n",
        "      <td>0.84</td>\n",
        "      <td>Severe</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        region crop_type  ...  NDVI_index  crop_disease_status\n",
-       "0  North India     Wheat  ...        0.63                 Mild\n",
-       "1    South USA   Soybean  ...        0.58                 None\n",
-       "2    South USA     Wheat  ...        0.80                 Mild\n",
-       "3  Central USA     Maize  ...        0.44                 None\n",
-       "4  Central USA    Cotton  ...        0.84               Severe\n",
+       "        region crop_type  ...  harvest_month  harvest_quarter\n",
+       "0  North India     Wheat  ...              5                2\n",
+       "1    South USA   Soybean  ...              5                2\n",
+       "2    South USA     Wheat  ...              6                2\n",
+       "3  Central USA     Maize  ...              7                3\n",
+       "4  Central USA    Cotton  ...              5                2\n",
        "\n",
-       "[5 rows x 20 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,78 +1020,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6eeb82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f3fa6402",
+   "execution_count": 22,
+   "id": "b8c115a5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "crop_type",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "count",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "20ff87be-383e-418a-8559-f0d2a579bbf9",
-       "rows": [
-        [
-         "Maize",
-         "111"
-        ],
-        [
-         "Soybean",
-         "108"
-        ],
-        [
-         "Cotton",
-         "107"
-        ],
-        [
-         "Wheat",
-         "92"
-        ],
-        [
-         "Rice",
-         "82"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 5
-       }
-      },
-      "text/plain": [
-       "crop_type\n",
-       "Maize      111\n",
-       "Soybean    108\n",
-       "Cotton     107\n",
-       "Wheat       92\n",
-       "Rice        82\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                Non-Null Count  Dtype         \n",
+      "---  ------                --------------  -----         \n",
+      " 0   region                500 non-null    object        \n",
+      " 1   crop_type             500 non-null    object        \n",
+      " 2   soil_moisture_%       500 non-null    float64       \n",
+      " 3   soil_pH               500 non-null    float64       \n",
+      " 4   temperature_C         500 non-null    float64       \n",
+      " 5   rainfall_mm           500 non-null    float64       \n",
+      " 6   humidity_%            500 non-null    float64       \n",
+      " 7   sunlight_hours        500 non-null    float64       \n",
+      " 8   irrigation_type       500 non-null    object        \n",
+      " 9   fertilizer_type       500 non-null    object        \n",
+      " 10  pesticide_usage_ml    500 non-null    float64       \n",
+      " 11  sowing_date           500 non-null    datetime64[ns]\n",
+      " 12  harvest_date          500 non-null    datetime64[ns]\n",
+      " 13  total_days            500 non-null    int64         \n",
+      " 14  yield_kg_per_hectare  500 non-null    float64       \n",
+      " 15  timestamp             500 non-null    datetime64[ns]\n",
+      " 16  latitude              500 non-null    float64       \n",
+      " 17  longitude             500 non-null    float64       \n",
+      " 18  NDVI_index            500 non-null    float64       \n",
+      " 19  crop_disease_status   500 non-null    object        \n",
+      " 20  sowing_month          500 non-null    int32         \n",
+      " 21  sowing_quarter        500 non-null    int32         \n",
+      " 22  harvest_month         500 non-null    int32         \n",
+      " 23  harvest_quarter       500 non-null    int32         \n",
+      "dtypes: datetime64[ns](3), float64(11), int32(4), int64(1), object(5)\n",
+      "memory usage: 86.1+ KB\n"
+     ]
     }
    ],
    "source": [
-    "df.crop_type.value_counts()"
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6a6eeb82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_columns = [\"crop_type\", \"region\", \"irrigation_type\", \"fertilizer_type\", \"crop_disease_status\"]\n",
+    "\n",
+    "df = pd.get_dummies(df, columns=categorical_columns, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4a2ed7c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500 entries, 0 to 499\n",
+      "Data columns (total 35 columns):\n",
+      " #   Column                        Non-Null Count  Dtype         \n",
+      "---  ------                        --------------  -----         \n",
+      " 0   soil_moisture_%               500 non-null    float64       \n",
+      " 1   soil_pH                       500 non-null    float64       \n",
+      " 2   temperature_C                 500 non-null    float64       \n",
+      " 3   rainfall_mm                   500 non-null    float64       \n",
+      " 4   humidity_%                    500 non-null    float64       \n",
+      " 5   sunlight_hours                500 non-null    float64       \n",
+      " 6   pesticide_usage_ml            500 non-null    float64       \n",
+      " 7   sowing_date                   500 non-null    datetime64[ns]\n",
+      " 8   harvest_date                  500 non-null    datetime64[ns]\n",
+      " 9   total_days                    500 non-null    int64         \n",
+      " 10  yield_kg_per_hectare          500 non-null    float64       \n",
+      " 11  timestamp                     500 non-null    datetime64[ns]\n",
+      " 12  latitude                      500 non-null    float64       \n",
+      " 13  longitude                     500 non-null    float64       \n",
+      " 14  NDVI_index                    500 non-null    float64       \n",
+      " 15  sowing_month                  500 non-null    int32         \n",
+      " 16  sowing_quarter                500 non-null    int32         \n",
+      " 17  harvest_month                 500 non-null    int32         \n",
+      " 18  harvest_quarter               500 non-null    int32         \n",
+      " 19  crop_type_Maize               500 non-null    bool          \n",
+      " 20  crop_type_Rice                500 non-null    bool          \n",
+      " 21  crop_type_Soybean             500 non-null    bool          \n",
+      " 22  crop_type_Wheat               500 non-null    bool          \n",
+      " 23  region_East Africa            500 non-null    bool          \n",
+      " 24  region_North India            500 non-null    bool          \n",
+      " 25  region_South India            500 non-null    bool          \n",
+      " 26  region_South USA              500 non-null    bool          \n",
+      " 27  irrigation_type_Manual        500 non-null    bool          \n",
+      " 28  irrigation_type_None          500 non-null    bool          \n",
+      " 29  irrigation_type_Sprinkler     500 non-null    bool          \n",
+      " 30  fertilizer_type_Mixed         500 non-null    bool          \n",
+      " 31  fertilizer_type_Organic       500 non-null    bool          \n",
+      " 32  crop_disease_status_Moderate  500 non-null    bool          \n",
+      " 33  crop_disease_status_None      500 non-null    bool          \n",
+      " 34  crop_disease_status_Severe    500 non-null    bool          \n",
+      "dtypes: bool(16), datetime64[ns](3), float64(11), int32(4), int64(1)\n",
+      "memory usage: 74.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -1036,9 +1143,7 @@
    "id": "6e812a3c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = df"
-   ]
+   "source": []
   }
  ],
  "metadata": {
