--- a/try.ipynb
+++ b/try.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 170,
    "id": "fce84e80",
    "metadata": {},
    "outputs": [],
@@ -14,15 +14,15 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier,RandomForestRegressor\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score,mean_squared_error, r2_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler,PolynomialFeatures\n",
     "from sklearn.decomposition import PCA\n",
     "from xgboost import XGBClassifier,XGBRegressor\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 171,
    "id": "582c7e3b",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "32171bd7-7dbd-4f0b-ac76-1bb43abc9878",
+       "ref": "7a0f0e2c-3ca6-48f2-b5fe-368caa3175df",
        "rows": [
         [
          "0",
@@ -463,7 +463,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 172,
    "id": "3500145c",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 173,
    "id": "9fe0df29",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 174,
    "id": "5426e60e",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
          "type": "integer"
         }
        ],
-       "ref": "83daa8cb-0689-4c8b-ad65-dd8dfa52ce9f",
+       "ref": "80700df0-0b21-45b1-94f7-a99356cf0398",
        "rows": [
         [
          "0",
@@ -938,7 +938,7 @@
        "[5 rows x 20 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 175,
    "id": "b8c115a5",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 176,
    "id": "6a6eeb82",
    "metadata": {},
    "outputs": [],
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 177,
    "id": "4a2ed7c8",
    "metadata": {},
    "outputs": [
@@ -1071,19 +1071,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "6e812a3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = df.drop(['yield_kg_per_hectare','total_days'], axis=1).values\n",
-    "y = df['yield_kg_per_hectare'].values\n",
-    "y = np.log1p(df['yield_kg_per_hectare'].values)"
+    "y = df['yield_kg_per_hectare'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 179,
    "id": "349a7cb8",
    "metadata": {},
    "outputs": [],
@@ -1093,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 180,
    "id": "f8ce6d3e",
    "metadata": {},
    "outputs": [],
@@ -1105,7 +1104,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 181,
+   "id": "34d634ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# poly = PolynomialFeatures(degree=3)\n",
+    "# x_train = poly.fit_transform(x_train)\n",
+    "# x_test = poly.transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "fbb10323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 1512105.1143569646\n",
+      "R^2 Score: -0.09488629526330805\n"
+     ]
+    }
+   ],
+   "source": [
+    "le = LinearRegression()\n",
+    "le.fit(x_train, y_train)\n",
+    "y_pred = le.predict(x_test)\n",
+    "print(\"Mean Squared Error:\", mean_squared_error(y_test, y_pred))\n",
+    "print(\"R^2 Score:\", r2_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
    "id": "7c29b95e",
    "metadata": {},
    "outputs": [
@@ -1113,13 +1147,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 1449491.7712648753\n",
-      "R^2 Score: -0.04954917511124668\n"
+      "Mean Squared Error: 1446048.844870574\n",
+      "R^2 Score: -0.04705621818058803\n"
      ]
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(n_estimators=100,max_depth=10, random_state=42)\n",
+    "rf = RandomForestRegressor(n_estimators=100,max_depth=3, random_state=42)\n",
     "rf.fit(x_train, y_train)\n",
     "y_pred = rf.predict(x_test)\n",
     "print(\"Mean Squared Error:\", mean_squared_error(y_test, y_pred))\n",
@@ -1128,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 184,
    "id": "55ab2536",
    "metadata": {},
    "outputs": [
@@ -1136,13 +1170,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Mean Squared Error: 1630926.7335554785\n",
-      "XGBoost R^2 Score: -0.18092274947950382\n"
+      "XGBoost Mean Squared Error: 1585286.5978976232\n",
+      "XGBoost R^2 Score: -0.1478756031063535\n"
      ]
     }
    ],
    "source": [
-    "xgb = XGBRegressor(n_estimators=100, learning_rate=0.1, random_state=42)\n",
+    "xgb = XGBRegressor(n_estimators=500, learning_rate=0.01, random_state=42)\n",
     "xgb.fit(x_train, y_train)\n",
     "y_pred_xgb = xgb.predict(x_test)\n",
     "print(\"XGBoost Mean Squared Error:\", mean_squared_error(y_test, y_pred_xgb))\n",
@@ -1151,18 +1185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "0eab785b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Params: {'colsample_bytree': 0.7, 'learning_rate': 0.01, 'max_depth': 3, 'n_estimators': 100, 'subsample': 0.7}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xgboost import XGBRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -1179,24 +1205,7 @@
     "grid = GridSearchCV(xgb, param_grid=params, cv=3, scoring=\"r2\", n_jobs=-1)\n",
     "grid.fit(x_train, y_train)\n",
     "\n",
-    "print(\"Best Params:\", grid.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "0535a896",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best R^2 Score: -0.009659577718140003\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(\"Best Params:\", grid.best_params_)\n",
     "print(\"Best R^2 Score:\", grid.best_score_)"
    ]
   }
